--- a/react-tutorial-master/public/css/base.css
+++ b/react-tutorial-master/public/css/base.css
@@ -1,59 +1,21 @@
-body {
-  background: #fff;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 15px;
-  line-height: 1.7;
-  margin: 0;
-  padding: 30px;
-}
+#content {
+  max-width: 55em;
+  margin: 0 auto; }
 
-a {
-  color: #4183c4;
-  text-decoration: none;
-}
+.comment {
+  background: #eee;
+  margin: 3pt;
+  padding: 5pt;
+  -webkit-border-radius: 8pt;
+  -ms-border-radius: 8pt;
+  -o-border-radius: 8pt;
+  -moz-border-radius: 8pt;
+  border-radius: 8pt; }
 
-a:hover {
-  text-decoration: underline;
-}
+.commentAuthor, .commentContent {
+  display: inline-block; }
 
-code {
-  background-color: #f8f8f8;
-  border: 1px solid #ddd;
-  border-radius: 3px;
-  font-family: "Bitstream Vera Sans Mono", Consolas, Courier, monospace;
-  font-size: 12px;
-  margin: 0 2px;
-  padding: 0 5px;
-}
+.commentAuthor {
+  width: 8em; }
 
-h1, h2, h3, h4 {
-  font-weight: bold;
-  margin: 0 0 15px;
-  padding: 0;
-}
-
-h1 {
-  border-bottom: 1px solid #ddd;
-  font-size: 2.5em;
-}
-
-h2 {
-  border-bottom: 1px solid #eee;
-  font-size: 2em;
-}
-
-h3 {
-  font-size: 1.5em;
-}
-
-h4 {
-  font-size: 1.2em;
-}
-
-p, ul {
-  margin: 15px 0;
-}
-
-ul {
-  padding-left: 30px;
-}
+/*# sourceMappingURL=base.css.map */
