Continued styling. Switched comment input to texture

--- a/react-tutorial-master/public/css/base.css
+++ b/react-tutorial-master/public/css/base.css
@@ -16,6 +16,11 @@
   display: inline-block; }
 
 .commentAuthor {
-  width: 8em; }
+  font-family: Roboto Slab;
+  width: 13em;
+  font-size: 13pt; }
+
+.commentContent {
+  font-family: Roboto; }
 
 /*# sourceMappingURL=base.css.map */
